deploy/kustomize/traefik/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.1.3
          args:
            - --api.insecure
            - --accesslog
            - --entrypoints.web.Address=:8000
            - --providers.kubernetescrd
          ports:
            - name: web
              containerPort: 8000
